--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
   '3.8'
   '3.9'
 install:
-  python setup.py install
+  - python setup.py install
 script:
-  python setup.py test
+  - python setup.py test
