--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ python:
   '3.9'
 install:
   - python setup.py install
-script:
+before_script:
   - python setup.py test
+script:
+  - python setup.py bdist_wheel sdist
