--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
-fastapi = "^0.61.2"
-itsdangerous = "^2.0.1"
-pydantic = "^1.7.2"
+fastapi = "^0.68.0"
+itsdangerous = ">=2.0.1,<3.0.0"
+pydantic = ">=1.7.2,<2.0.0"
 uvicorn = {version = "^0.15.0", optional = true, extras = ["examples"]}
 
 [tool.poetry.dev-dependencies]
