--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,12 +29,13 @@ fastapi = "^0.68.0"
 itsdangerous = ">=2.0.1,<3.0.0"
 pydantic = ">=1.7.2,<2.0.0"
 uvicorn = {version = "^0.15.0", optional = true, extras = ["examples"]}
+Jinja2 = {version = "^3.0.1", extras = ["examples"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 
 [tool.poetry.extras]
-examples = [ "uvicorn" ]
+examples = [ "uvicorn", "jinja2" ]
 
 [tool.pytest.ini_options]
 addopts = "--strict-markers --tb=short -s"
