--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ fastapi = "^0.68.0"
 itsdangerous = ">=2.0.1,<3.0.0"
 pydantic = ">=1.7.2,<2.0.0"
 uvicorn = {version = "^0.15.0", optional = true, extras = ["examples"]}
-Jinja2 = {version = "^3.0.1", extras = ["examples"]}
+Jinja2 = {version = "^3.0.1", optional = true, extras = ["examples"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
