--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ uvicorn = {version = "^0.15.0", optional = true, extras = ["examples"]}
 Jinja2 = {version = "^3.0.1", optional = true, extras = ["examples"]}
 
 [tool.poetry.dev-dependencies]
+black = "^23.3.0"
 httpx = "^0.24.1"
 pytest = "^7.3.1"
 
