--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,16 +29,24 @@ python = "^3.7"
 fastapi = "^0"
 itsdangerous = ">=2.0.1,<3.0.0"
 pydantic = ">=1.7.2,<2.0.0"
-uvicorn = {version = "^0.15.0", optional = true, extras = ["examples"]}
-Jinja2 = {version = "^3.0.1", optional = true, extras = ["examples"]}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
+mypy = "^1.3.0"
+
+[tool.poetry.group.examples]
+optional = true
+
+[tool.poetry.group.examples.dependencies]
+Jinja2 = "^3.0.1"
+uvicorn = "^0.15.0"
+
+[tool.poetry.group.test]
+optional = true
+
+[tool.poetry.group.test.dependencies]
 httpx = "^0.24.1"
 pytest = "^7.3.1"
-
-[tool.poetry.extras]
-examples = [ "uvicorn", "jinja2" ]
 
 [tool.pytest.ini_options]
 addopts = "--strict-markers --tb=short -s"
