--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ['poetry-core>=1.0.0']
 build-backend = 'poetry.core.masonry.api'
+requires = ['poetry-core>=1.0.0']
 
 
 [tool.poetry]
@@ -36,9 +36,10 @@ keywords = [
 ]
 license = 'MIT'
 name = 'fastapi-csrf-protect'
+packages = [{from='src', include='fastapi_csrf_protect'}]
 readme = 'README.md'
 repository = 'https://github.com/aekasitt/fastapi-csrf-protect'
-version = '0.3.3'
+version = '0.3.4'
 
 
 [tool.poetry.dependencies]
