--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [build-system]
-build-backend = 'poetry.core.masonry.api'
-requires = ['poetry-core>=1.0.0']
+build-backend = 'hatchling.build'
+requires = ['hatchling']
 
 
-[tool.poetry]
+[project]
 authors = [
-  'Sitt Guruvanich <aekazitt+github@gmail.com>',
+  {name='Sitt Guruvanich', email='aekazitt+github@gmail.com'},
 ]
 classifiers = [
   'Environment :: Web Environment',
@@ -23,6 +23,12 @@ classifiers = [
   'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
   'Topic :: Software Development :: Libraries :: Python Modules',
 ]
+dependencies = [
+  'fastapi >=0',
+  'itsdangerous >=2.0.1,<3.0.0',
+  'pydantic >=2.0.0',
+  'pydantic-settings >=2.0.0',
+]
 description = 'Stateless implementation of Cross-Site Request Forgery (XSRF) Protection by using Double Submit Cookie mitigation pattern'
 homepage = 'https://github.com/aekasitt/fastapi-csrf-protect'
 keywords = [
@@ -35,48 +41,27 @@ keywords = [
   'xsrf',
 ]
 license = 'MIT'
-name = 'fastapi-csrf-protect'
-packages = [{from='src', include='fastapi_csrf_protect'}]
 readme = 'README.md'
+name = 'fastapi-csrf-protect'
+# packages = [{from='src', include='fastapi_csrf_protect'}]
 repository = 'https://github.com/aekasitt/fastapi-csrf-protect'
+requires-python = '>=3.8'
 version = '0.3.4'
 
 
-[tool.poetry.dependencies]
-fastapi = '^0'
-itsdangerous = '>=2.0.1,<3.0.0'
-pydantic = '^2.0.0'
-pydantic-settings = '^2.0.0'
-python = '^3.8'
+[project.optional-dependencies]
+examples = [
+  'Jinja2 >=3.0.1',
+  'python-multipart >=0.0.6',
+  'pydantic[email] >=1.7.2,<3.0.0',
+  'uvicorn >=0.15.0',
+]
 
 
-[tool.poetry.group.dev]
-optional = true
-
-
-[tool.poetry.group.dev.dependencies]
-mypy = '^1.3.0'
-ruff = '^0.4.7'
-
-
-[tool.poetry.group.examples]
-optional = true
-
-
-[tool.poetry.group.examples.dependencies]
-Jinja2 = '^3.0.1'
-python-multipart = '^0.0.6'
-pydantic = {version = '>=1.7.2,<3.0.0', extras = ['email']}
-uvicorn = '^0.15.0'
-
-
-[tool.poetry.group.test]
-optional = true
-
-
-[tool.poetry.group.test.dependencies]
-httpx = '^0.24.1'
-pytest = '^7.3.1'
+tests = [
+  'httpx >=0.24.1',
+  'pytest >=7.3.1',
+]
 
 
 [tool.pytest.ini_options]
@@ -93,3 +78,10 @@ target-version = 'py38'
 
 [tool.ruff.lint.per-file-ignores]
 '__init__.py' = ['F401']  # Ignore empty imports
+
+
+[tool.uv]
+dev-dependencies = [
+  'mypy >=1.3.0',
+  'ruff >=0.4.7',
+]
