--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ target-version = 'py39'
 dev-dependencies = [
   'httpx >=0.24.1',
   'mypy >=1.3.0',
+  'pdoc >=14.7.0',
   'pytest >=7.3.1',
   'ruff >=0.4.7',
 ]
