--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ examples = [
 disallow_incomplete_defs = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
-exclude = [ 'examples' ]
+exclude = [ 'examples', 'tests' ]
 ignore_missing_imports = true
 strict = true
 
