--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,10 @@ classifiers = [
   'Topic :: Software Development :: Libraries :: Python Modules',
 ]
 dependencies = [
-  'fastapi >=0',
   'itsdangerous >=2.0.1,<3.0.0',
   'pydantic >=2.0.0',
   'pydantic-settings >=2.0.0',
+  'starlette >=0',
 ]
 description = 'Stateless implementation of Cross-Site Request Forgery (XSRF) Protection by using Double Submit Cookie mitigation pattern'
 homepage = 'https://github.com/aekasitt/fastapi-csrf-protect'
