feat: wrap compiled implementations with uncompiled

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,12 @@ mypy-args = [
   '--disallow-incomplete-defs',
   '--strict',
 ]
-only-include = [ '/src' ]
+only-include = [
+  '/src/fastapi_csrf_protect/core.py',
+  '/src/fastapi_csrf_protect/csrf_config.py',
+  '/src/fastapi_csrf_protect/exceptions.py',
+  '/src/fastapi_csrf_protect/load_config.py',
+]
 
 
 [tool.hatch.build.targets.wheel.hooks.mypyc.options]
