revert: wrap compiled implementations with uncompiled
This reverts commit 15880f61e1f722734950e14f58f338ebb2484a87.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,12 +71,7 @@ mypy-args = [
   '--disallow-incomplete-defs',
   '--strict',
 ]
-only-include = [
-  '/src/fastapi_csrf_protect/core.py',
-  '/src/fastapi_csrf_protect/csrf_config.py',
-  '/src/fastapi_csrf_protect/exceptions.py',
-  '/src/fastapi_csrf_protect/load_config.py',
-]
+only-include = [ '/src' ]
 
 
 [tool.hatch.build.targets.wheel.hooks.mypyc.options]
