--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ classifiers = [
 ]
 dependencies = [
   'itsdangerous >=2.0.1,<3.0.0',
+  'pydantic >=2.0.0',
+  'pydantic-settings >=2.0.0',
   'starlette >=0',
 ]
 description = 'Stateless implementation of Cross-Site Request Forgery (XSRF) Protection by using Double Submit Cookie mitigation pattern'
