--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,8 @@ requires = [ 'hatchling >=1.27.0' ]
 
 [dependency-groups]
 dev = [
-  'fastapi >=0',
-  'httpx >=0.24.1',
   'mypy >=1.15.0',
   'pdoc >=14.7.0',
-  'pytest >=7.3.1',
   'ruff >=0.4.7',
 ]
 examples = [
@@ -17,6 +14,12 @@ examples = [
   'python-multipart >=0.0.6',
   'pydantic[email] >=1.7.2,<3.0.0',
   'uvicorn >=0.15.0',
+]
+tests = [
+  'fastapi >=0',
+  'httpx >=0.24.1',
+  'pytest >=7.3.1',
+  'pytest-modern >=0.7.3',
 ]
 
 
