--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ dev = [
   'ruff >=0.4.7',
 ]
 examples = [
-  'Jinja2 >=3.0.1',
   'python-multipart >=0.0.6',
   'pydantic[email] >=1.7.2,<3.0.0',
   'uvicorn >=0.15.0',
+  'minijinja >=2.11.0',
+  'fastapi >=0.115.12',
 ]
 tests = [
   'fastapi >=0',
