--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,9 @@ target-version = 'py39'
 
 
 [tool.ruff.lint.per-file-ignores]
-'__init__.py' = ['F401']  # Ignore unused imports
+'__init__.py' = [
+  'F401',  # Ignore unused imports
+]
 'tests/**/*.py' = [
   'F401',  # Ignore unused imports
   'F811',  # Ignore redefinition of unused variable
