--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
   'itsdangerous >=2.0.1,<3.0.0',
   'pydantic >=2.0.0',
   'pydantic-settings >=2.0.0',
+  "python-multipart>=0.0.20",
   'starlette >=0',
 ]
 description = 'Stateless implementation of Cross-Site Request Forgery (XSRF) Protection by using Double Submit Cookie mitigation pattern'
